fix: .footer__social-list alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -30,12 +30,12 @@
   justify-content: space-between;
   width: 100%;
   margin-top: 20px;
-  padding-top: 20px;
+  padding-top: 16px;
   border-top: 1px solid #424242;
 }
 
 .footer__copyright {
-  margin: 0;
+  margin: 4px 0 0;
   font-weight: normal;
   font-size: 13px;
   line-height: 16px;
@@ -79,6 +79,7 @@
   .footer__main-container {
     flex-direction: column-reverse;
     align-items: center;
+    padding-top: 24px;
   }
   .footer__copyright {
     margin-top: 30px;
@@ -89,7 +90,7 @@
   .footer__social-list {
     flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 8px;
   }
   .footer__social-link {
     font-size: 12px;
